Rewrote console interface and debug code

--- a/src/Makefile
+++ b/src/Makefile
@@ -32,8 +32,9 @@ all: kexec-loader
 clean:
 	rm -f *.o kexec-loader
 
-kexec-loader: main.o mount.o config.o console.o
-	$(CC) $(CFLAGS) $(LIBS) -o kexec-loader main.o mount.o config.o console.o
+kexec-loader: main.o mount.o config.o console.o debug.o
+	$(CC) $(CFLAGS) $(LIBS) -o kexec-loader main.o mount.o config.o \
+		console.o debug.o
 
 main.o: main.c main.h
 	$(CC) $(CFLAGS) $(INCLUDES) -c -o main.o main.c
@@ -46,3 +47,6 @@ config.o: config.c config.h
 
 console.o: console.c console.h
 	$(CC) $(CFLAGS) $(INCLUDES) -c -o console.o console.c
+
+debug.o: debug.c debug.h
+	$(CC) $(CFLAGS) $(INCLUDES) -c -o debug.o debug.c
