Implemented allocate() and strclone()

--- a/src/Makefile
+++ b/src/Makefile
@@ -32,9 +32,9 @@ all: kexec-loader
 clean:
 	rm -f *.o kexec-loader
 
-kexec-loader: main.o mount.o config.o console.o debug.o
+kexec-loader: main.o mount.o config.o console.o debug.o misc.o
 	$(CC) $(CFLAGS) $(LIBS) -o kexec-loader main.o mount.o config.o \
-		console.o debug.o
+		console.o debug.o misc.o
 
 main.o: main.c main.h
 	$(CC) $(CFLAGS) $(INCLUDES) -c -o main.o main.c
@@ -50,3 +50,6 @@ console.o: console.c console.h
 
 debug.o: debug.c debug.h
 	$(CC) $(CFLAGS) $(INCLUDES) -c -o debug.o debug.c
+
+misc.o: misc.c misc.h
+	$(CC) $(CFLAGS) $(INCLUDES) -c -o misc.o misc.c
