Removed debug.c/debug.h and added a simple printf() wrapper for debug_r in misc.c to reduce code size.

--- a/src/Makefile
+++ b/src/Makefile
@@ -32,9 +32,9 @@ all: kexec-loader
 clean:
 	rm -f *.o kexec-loader
 
-kexec-loader: main.o mount.o config.o console.o debug.o misc.o
+kexec-loader: main.o mount.o config.o console.o misc.o
 	$(CC) $(CFLAGS) $(LIBS) -o kexec-loader main.o mount.o config.o \
-		console.o debug.o misc.o
+		console.o misc.o
 
 main.o: main.c main.h
 	$(CC) $(CFLAGS) $(INCLUDES) -c -o main.o main.c
@@ -47,9 +47,6 @@ config.o: config.c config.h misc.o
 
 console.o: console.c console.h misc.o
 	$(CC) $(CFLAGS) $(INCLUDES) -c -o console.o console.c
-
-debug.o: debug.c debug.h
-	$(CC) $(CFLAGS) $(INCLUDES) -c -o debug.o debug.c
 
 misc.o: misc.c misc.h
 	$(CC) $(CFLAGS) $(INCLUDES) -c -o misc.o misc.c
