--- a/src/Makefile
+++ b/src/Makefile
@@ -34,8 +34,8 @@ clean:
 	rm -f kexec/*.o kexec_libs kexec_build
 
 kexec-loader: main.o mount.o config.o console.o misc.o kexec.o
-	$(CC) $(CFLAGS) $(LIBS) -o kexec-loader main.o mount.o config.o \
-		console.o misc.o kexec.o kexec/*.o `cat kexec_libs`
+	$(CC) $(CFLAGS) $(LIBS) -static -o kexec-loader main.o mount.o \
+		config.o console.o misc.o kexec.o kexec/*.o `cat kexec_libs`
 
 main.o: main.c
 	$(CC) $(CFLAGS) $(INCLUDES) -c -o main.o main.c
