--- a/src/Makefile
+++ b/src/Makefile
@@ -31,7 +31,7 @@ all: kexec-loader
 
 clean:
 	rm -f *.o kexec-loader
-	rm -f kexec/*.o kexec_libs kexec_build
+	rm -rf kexec/ kexec_libs kexec_build
 
 kexec-loader: main.o mount.o config.o console.o misc.o kexec.o grub.o
 	$(CC) $(CFLAGS) $(LIBS) -static -o kexec-loader main.o mount.o \
