Changed example kexec-loader.conf and added message for no defined targets

--- a/kexec-loader.conf
+++ b/kexec-loader.conf
@@ -1,4 +1,6 @@
 # Example kexec-loader configuration file
+# Read the documentation for more information!!
+#
 
 # Timeout is specified in seconds
 #
@@ -20,17 +22,10 @@ timeout 5
 # kmod foomod name=value name
 # kmod barmod name=value name
 
-# Boot Linux
+# Example boot target
 #
-title	Generic Linux System
-root	hda1
-kernel	/vmlinuz
-cmdline	root=/dev/hda3
-initrd	/initrd.gz
-
-# Boot this floppy (For debugging)
-#
-title	kexec-loader
-root	LABEL=kexecloader
-kernel	/vmlinuz
-initrd	/initrd.img
+# title Generic Linux System
+# root hda1
+# kernel /vmlinuz
+# cmdline root=/dev/hda3
+# initrd /initrd.gz
