Changed grub-autodetect to use on/off rather than yes/no

--- a/kexec-loader.conf
+++ b/kexec-loader.conf
@@ -6,6 +6,12 @@
 #
 timeout 5
 
+# Uncomment the following line to enable GRUB autodetection, cannot be used in
+# conjunction with grub-path. The first detected GRUB installation will be used
+# if this is enabled.
+#
+# grub-autodetect on
+
 # Load device.map/menu.lst from a GRUB installation
 #
 # grub-path (hda1)/grub
