--- a/kexec-loader.conf
+++ b/kexec-loader.conf
@@ -1,37 +1,31 @@
 # Example kexec-loader configuration file
-# Read the documentation for more information!!
+# Read the documentation for more information.
 #
 
-# Timeout is specified in seconds
+# Number of seconds to wait before booting the default menu entry.
 #
-timeout 5
+# timeout 5
 
-# Uncomment the following line to enable GRUB autodetection, cannot be used in
-# conjunction with grub-path. The first detected GRUB installation will be used
-# if this is enabled.
+# Explicitly enable/disable GRUB autodetection. Autodetection will be enabled
+# by default, but only if no boot targets are specified in this file.
 #
 # grub-autodetect on
+# grub-autodetect off
 
-# Load device.map/menu.lst from a GRUB installation
+# Force GRUB path. Setting this will disable autodetection.
 #
-# grub-path (hda1)/grub
+# grub-path (hda1)/boot/grub
 
-# Map GRUB device names
+# Map GRUB disks/partitions
 # This overrides any mappings in device.map
 #
 # grub-map hd0 sda
-# grub-map hd1,a hda5
-
-# Specify arguments for kernel modules
-# All modules in /modules/ are loaded automatically
-#
-# kmod foomod name=value name
-# kmod barmod name=value name
+# grub-map hd1,a hda8
 
 # Example boot target
 #
 # title Generic Linux System
 # root hda1
-# kernel /vmlinuz
-# cmdline root=/dev/hda3
-# initrd /initrd.gz
+# kernel /boot/vmlinuz
+# cmdline root=/dev/hda1 ro
+# initrd /boot/initrd.gz
